<resources>
    <string name="app_name">Hello</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
    <string name="button5">button5</string>
    <string name="button6">button6</string>
    <string name="button7">button7</string>
    <string name="button8">button8</string>
    <string name="button9">button9</string>
    <string name="button10">button10</string>
    <string name="android_practice">Android practice</string>
    <string name="frame_layout">frame_layout</string>
    <string name="main_activity">main_activity</string>
    <string name="constrain_layout">constraint_layout</string>
    <string name="Login">login</string>
    <string name="signUp">signUp</string>
</resources>