<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:gravity="center_vertical"
        android:text="@string/android_practice"
        android:textSize="25sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:textAllCaps="false">

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#D2D7DC"
                android:text="@string/button1"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#D2D7DC"
                android:text="@string/button2"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#D2D7DC"
                android:text="@string/button3"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#D2D7DC"
                android:text="@string/button4"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#D2D7DC"
                android:text="@string/button5"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#D2D7DC"
                android:text="@string/button6"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#D2D7DC"
                android:text="@string/button7"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#D2D7DC"
                android:text="@string/button8"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#D2D7DC"
                android:text="@string/button9"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="#D2D7DC"
                android:text="@string/button10"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>


