<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="#D2D7DC"
        android:text="@string/button1"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_margin="20dp" />


    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="#D2D7DC"
        android:text="@string/button2"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:background="#D2D7DC"
        android:text="@string/button3"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

</LinearLayout>